--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
     </div>
     </div>
     <Section class="hero">
-        <div class="Container">
+        <div class="container">
             <div class=" left-col">
                 <p class="subhead"> Hair style &amp;Beauty </p>
                 <h1> We  do the magic !!</h1>
@@ -42,7 +42,6 @@
                 <a href="#" class="Watch-video-cta">
 
                     <img src="images /watch.html" alt= "Watch a video">
-
                 </a>
 
                 </div>
@@ -64,6 +63,8 @@
                 <li>Spa</li>
                 <li>Beauty</li>
                 <li>Weddings</li>
+                <li>Braids</li>
+                <li>Barber</li>
             </ul>
             <img src="images /the setup.jpeg" alt=" the set up">
 
