--- a/test.html
+++ b/test.html
@@ -38,16 +38,11 @@
                 <h1> We  do the magic !!</h1>
                 <div class="hero-cta">
                 <a href="#"  class="primary-cta">Book for your appointment</a>
-
                 <a href="#" class="Watch-video-cta">
-
                     <img src="images /watch.html" alt= "Watch a video">
                 </a>
-
                 </div>
-
             </div>
-
             <img src="images /illustration.png" class="hero" alt="illustration">
 
 
@@ -109,7 +104,7 @@
                     <input type="text"id="phone" Phone="phone" placeholder="830000">
 
                     <label for="message ">Message</label>
-                    <textarea name="message " id="message " cols="30" rows="10"></textarea>
+                    <textarea name="message " id="message " cols="30" rows="10" placeholder=" Thank you for contacting us.We love yo hear from you."></textarea>
 
                     <input type="submit" class="send-message-cta" value="Send Message ">
                 </form>
