--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
         </nav>
     </div>
     </div>
-    <Section class="hero">
+    <section class="hero">
         <div class="container">
             <div class=" left-col">
                 <p class="subhead"> Hair style &amp;Beauty </p>
